--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
   <header class="header">
-    <div class="header__container">
+    <div class="container">
       <div class="header__inner">
-        <a class="header__logo logo" href="./index.html">Panto</a>
+        <a class="logo logo--white" href="./index.html">Panto</a>
         <nav class="nav">
           <!-- <button class="nav__menu-btn">
             <span></span>
@@ -25,7 +25,11 @@
           </button> -->
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link" href="#">Furniture</a>
+              <a class="nav__link nav__link--flex" href="#">Furniture
+                <svg class="nav__link-svg" width="12" height="16" aria-label="icon">
+                  <use href="./images/icons/icons.svg#arrow-down"></use>
+                </svg>
+              </a>
             </li>
             <li class="nav__item">
               <a class="nav__link" href="">Shop</a>
@@ -41,12 +45,9 @@
         </nav>
         <a class="header__basket" href="">
           <div class="header__basket-icon">
-            <svg width="34" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M17.007 2.833c3.797 0 6.918 2.984 7.076 6.764h-.037a.71.71 0 0 1-.061.32h.22c1.725 0 3.53 1.195 4.254 4.08l.079.34 1.09 8.776c.783 5.597-2.28 7.95-6.457 8.05l-.28.004H11.147c-4.245 0-7.517-1.547-6.797-7.674l.049-.38L5.5 14.337c.544-3.107 2.368-4.332 4.125-4.416l.195-.004h.11a.92.92 0 0 1 0-.32c.16-3.78 3.28-6.764 7.077-6.764Zm-4.12 11.8c-.691 0-1.252.577-1.252 1.289 0 .711.56 1.288 1.252 1.288s1.252-.577 1.252-1.288l-.01-.162c-.077-.635-.603-1.127-1.242-1.127Zm8.201 0c-.691 0-1.252.577-1.252 1.289 0 .711.56 1.288 1.252 1.288s1.252-.577 1.252-1.288c0-.712-.56-1.289-1.252-1.289Zm-4.137-9.955c-2.725 0-4.935 2.202-4.935 4.919a.918.918 0 0 1 0 .32h9.933a.92.92 0 0 1-.062-.32c0-2.717-2.21-4.919-4.936-4.919Z"
-                fill="#fff" />
+            <svg class="nav__link-svg" width="32" height="32" aria-label="icon basket">
+              <use href="./images/icons/icons.svg#basket"></use>
             </svg>
-
             <span>10</span>
           </div>
         </a>
@@ -54,8 +55,80 @@
     </div>
   </header>
   <main class="main">
-    <section class="hero">
-      <div class="container"></div>
+    <!-- <section class="hero" style="background-image:
+                linear-gradient(180.00deg, rgba(255, 255, 255, 0) 86.133%, rgb(255, 255, 255) 100%),
+                -webkit-image-set(
+            url(./images/hero/hero@1x.avif) type('image/avif') 1x,
+            url(./images/hero/hero@2x.avif) type('image/avif') 2x,
+
+            url(./images/hero/hero@1x.webp) type('image/webp') 1x,
+            url(./images/hero/hero@2x.webp) type('image/webp') 2x,
+
+            url(./images/hero/hero@1x.jpg) 1x,
+            url(./images/hero/hero@2x.jpg) 2x)">
+
+      <div class="hero__tips">
+        <button class="hero__tip hero__tip--1" data-uk-tooltip="{pos:'bottom-center'}" title="Clue">
+
+          <span class="hero__tooltiptext" data-uk-tooltip=""
+            title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, repudiandae.">+</span>
+
+        </button>
+        <button class="hero__tip hero__tip--2" data-uk-tooltip="{pos:'bottom-left'}" title="Подсказка">
+          <span class="hero__tooltiptext" data-uk-tooltip=""
+            title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, repudiandae.">+
+          </span>
+        </button>
+      </div>
+
+
+      <div class="container">
+        <p class="hero__descr">Make your interior more minimalistic & modern</p>
+        <h1 class="hero__title">Turn your room with panto into a lot more minimalist and modern with ease and speed</h1>
+        <div class="hero__search search">
+          <form action="#" class="hero__search-form search__form">
+            <div class="search__box">
+              <input class="hero__search-input search__input" type="text" placeholder="Search furniture"
+                autocomplete="off">
+              <button class="hero__search-btn search__btn" type="submit">
+                <svg class="hero__search-svg" width="18" height="18" aria-label="icon search">
+                  <use href="./images/icons/icons.svg#search"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
+      </div> 
+    </section>-->
+    <section class="choosingus container">
+      <div class="choosingus__inner">
+        <h2 class="choosingus__title section-title">Why Choosing Us</h2>
+        <ul class="choosingus__list">
+          <li class="choosingus__item">
+            <h3 class="choosingus__item-title">Luxury facilities</h3>
+            <p class="choosingus__item-text">
+              The advantage of hiring a workspace with us is that givees you comfortable service and all-around
+              facilities.
+            </p>
+            <a class="link-more" href="">More Info</a>
+          </li>
+          <li class="choosingus__item">
+            <h3 class="choosingus__item-title">Affordable Price</h3>
+            <p class="choosingus__item-text">
+              You can get a workspace of the highst quality at an affordable price and still enjoy the facilities that
+              are oly here.
+            </p>
+            <a class="link-more" href="">More Info</a>
+          </li>
+          <li class="choosingus__item">
+            <h3 class="choosingus__item-title">Many Choices</h3>
+            <p class="choosingus__item-text">
+              We provide many unique work space choices so that you can choose the workspace to your liking.
+            </p>
+            <a class="link-more" href="">More Info</a>
+          </li>
+        </ul>
+      </div>
     </section>
 
 
