--- a/index.html
+++ b/index.html
@@ -1393,6 +1393,28 @@
           <a class="bestproduct__link link-more" href="">View All</a>
         </ul>
     </section>
+    <section class="experiences">
+      <div class="experiences__container">
+        <div class="experiences__box">
+          <div class="experiences__thumb">
+
+            <img src="image/png" srcset="
+          ./images/experiences/experiences-1@1x.png 1x,
+          ./images/experiences/experiences-1@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+          </div>
+          <div class="experiences__description">
+            <p class="experiences__subtitle subtitle">experiences</p>
+            <h2 class="experiences__title section-title">we provide you the best experience</h2>
+            <p class="experiences__descr">
+              You don’t have to worry about the result because all of these interiors are made by people who are
+              professionals in
+              their fields with an elegant and lucurious style and with premium quality materials
+            </p>
+            <a class="link-more" href="">More Info</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
   </main>
