--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panto</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Inter:wght@100..900&display=swap');
+  </style>
   <link rel="stylesheet" href="scss/modern-normalize.min.css">
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swip?er@9/swiper-bundle.min.css"> -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
@@ -1394,26 +1397,282 @@
         </ul>
     </section>
     <section class="experiences">
-      <div class="experiences__container">
-        <div class="experiences__box">
-          <div class="experiences__thumb">
-
-            <img src="image/png" srcset="
+      <div class="experiences__box flex">
+        <div class="experiences__thumb">
+          <img src="image/png" srcset="
           ./images/experiences/experiences-1@1x.png 1x,
           ./images/experiences/experiences-1@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+        </div>
+        <div class="experiences__description container">
+          <p class="subtitle">experiences</p>
+          <h2 class="experiences__title section-title">we provide you the best experience</h2>
+          <p class="experiences__descr">
+            You don’t have to worry about the result because all of these interiors are made by people who are
+            professionals in
+            their fields with an elegant and lucurious style and with premium quality materials
+          </p>
+          <a class="link-more" href="">More Info</a>
+        </div>
+
+      </div>
+    </section>
+    <section class="materials">
+      <!-- <div class="materials__container"> -->
+      <div class="materials__box flex">
+        <div class="experiences__materials container">
+          <p class="subtitle">Materials</p>
+          <h2 class="experiences__title section-title">Very serious materials for making furniture</h2>
+          <p class="materials__descr experiences__descr">
+            Because panto was very serious about designing furniture for our environment, using a very expensive and
+            famous capital
+            but at a relatively low price
+          </p>
+          <a class="link-more" href="">More Info</a>
+        </div>
+        <div class="materials__thumb flex">
+          <div class="materials__thumb-row1">
+            <img class="materials__img" src="image/png" srcset="
+                        ./images/materials/images1@1x.png 1x,
+                        ./images/materials/images1@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+            <img class="materials__img" src="image/png" srcset="
+                        ./images/materials/images2@1x.png 1x,
+                        ./images/materials/images2@2x.png 2x" loading="lazy" decoding="async" alt="images" />
           </div>
-          <div class="experiences__description">
-            <p class="experiences__subtitle subtitle">experiences</p>
-            <h2 class="experiences__title section-title">we provide you the best experience</h2>
-            <p class="experiences__descr">
-              You don’t have to worry about the result because all of these interiors are made by people who are
-              professionals in
-              their fields with an elegant and lucurious style and with premium quality materials
-            </p>
-            <a class="link-more" href="">More Info</a>
+          <div class="materials__thumb-row2">
+            <img src="image/png" srcset="
+                        ./images/materials/images3@1x.png 1x,
+                        ./images/materials/images3@2x.png 2x" loading="lazy" decoding="async" alt="images" />
           </div>
         </div>
       </div>
+    </section>
+    <section class="testimonials container">
+      <p class="subtitle">Testimonials</p>
+      <h2 class="testimonials__title section-title">Our Client Reviews</h2>
+      <ul class="testimonials__list">
+        <li class="testimonials__item" style="background-image:
+ -webkit-image-set( 
+          url(./images/testimonial/unsplash1@1x.avif) type('image/avif') 1x,
+          url(./images/testimonial/unsplash1@2x.avif) type('image/avif') 2x,
+          url(./images/testimonial/unsplash1@1x.webp) type('image/webp') 1x,
+          url(./images/testimonial/unsplash1@2x.webp) type('image/webp') 2x,
+          url(./images/testimonial/unsplash1@1x.jpg) 1x,
+          url(./images/testimonial/unsplash1@3x.jpg) 2x)">
+          <div class="testimonials__item-content">
+            <img src="image/png" srcset="
+                        ./images/testimonial/avatar1@1x.png 1x,
+                        ./images/testimonial/avatar1@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+            <blockquote class="testimonials__comment">
+              <cite class="testimonials__comment-name">Bang Upin<span>Pedagang Asongan</span></cite>
+              <p class="testimonials__comment-text">
+                “Terimakasih banyak, kini ruanganku menjadi lebih mewah dan terlihat mahal“
+              </p>
+            </blockquote>
+            <ul class="rating">
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star-opacity.svg" alt="icon star-opasity">
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="testimonials__item" style="background-image:
+         -webkit-image-set( 
+                  url(./images/testimonial/unsplash2@1x.avif) type('image/avif') 1x,
+                  url(./images/testimonial/unsplash2@2x.avif) type('image/avif') 2x,
+                  url(./images/testimonial/unsplash2@1x.webp) type('image/webp') 1x,
+                  url(./images/testimonial/unsplash2@2x.webp) type('image/webp') 2x,
+                  url(./images/testimonial/unsplash2@1x.jpg) 1x,
+                  url(./images/testimonial/unsplash2@3x.jpg) 2x)">
+          <div class="testimonials__item-content">
+            <img src="image/png" srcset="
+                        ./images/testimonial/avatar2@1x.png 1x,
+                        ./images/testimonial/avatar2@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+            <blockquote class="testimonials__comment">
+              <cite class="testimonials__comment-name">Ibuk Sukijan<span>Ibu Rumah Tangga</span></cite>
+              <p class="testimonials__comment-text">
+                “Makasih Panto, aku sekarang berasa tinggal di apartment karena barang-barang yang terlihat mewah“
+              </p>
+            </blockquote>
+            <ul class="rating">
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star-opacity.svg" alt="icon star-opasity">
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="testimonials__item" style="background-image:
+         -webkit-image-set( 
+                  url(./images/testimonial/unsplash3@1x.avif) type('image/avif') 1x,
+                  url(./images/testimonial/unsplash3@2x.avif) type('image/avif') 2x,
+                  url(./images/testimonial/unsplash3@1x.webp) type('image/webp') 1x,
+                  url(./images/testimonial/unsplash3@2x.webp) type('image/webp') 2x,
+                  url(./images/testimonial/unsplash3@1x.jpg) 1x,
+                  url(./images/testimonial/unsplash3@3x.jpg) 2x)">
+          <div class="testimonials__item-content">
+            <img src="image/png" srcset="
+                        ./images/testimonial/avatar3@1x.png 1x,
+                        ./images/testimonial/avatar3@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+            <blockquote class="testimonials__comment">
+              <cite class="testimonials__comment-name">Mpok Ina<span>Karyawan Swasta</span></cite>
+              <p class="testimonials__comment-text">
+                “Sangat terjangkau untuk kantong saya yang tidak terlalu banyak“
+              </p>
+            </blockquote>
+            <ul class="rating">
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star-opacity.svg" alt="icon star-opasity">
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="testimonials__item" style="background-image:
+         -webkit-image-set( 
+                  url(./images/testimonial/unsplash1@1x.avif) type('image/avif') 1x,
+                  url(./images/testimonial/unsplash1@2x.avif) type('image/avif') 2x,
+                  url(./images/testimonial/unsplash1@1x.webp) type('image/webp') 1x,
+                  url(./images/testimonial/unsplash1@2x.webp) type('image/webp') 2x,
+                  url(./images/testimonial/unsplash1@1x.jpg) 1x,
+                  url(./images/testimonial/unsplash1@3x.jpg) 2x)">
+          <div class="testimonials__item-content">
+            <img src="image/png" srcset="
+                                ./images/testimonial/avatar1@1x.png 1x,
+                                ./images/testimonial/avatar1@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+            <blockquote class="testimonials__comment">
+              <cite class="testimonials__comment-name">Bang Upin<span>Pedagang Asongan</span></cite>
+              <p class="testimonials__comment-text">
+                “Terimakasih banyak, kini ruanganku menjadi lebih mewah dan terlihat mahal“
+              </p>
+            </blockquote>
+            <ul class="rating">
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star-opacity.svg" alt="icon star-opasity">
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="testimonials__item" style="background-image:
+                 -webkit-image-set( 
+                          url(./images/testimonial/unsplash2@1x.avif) type('image/avif') 1x,
+                          url(./images/testimonial/unsplash2@2x.avif) type('image/avif') 2x,
+                          url(./images/testimonial/unsplash2@1x.webp) type('image/webp') 1x,
+                          url(./images/testimonial/unsplash2@2x.webp) type('image/webp') 2x,
+                          url(./images/testimonial/unsplash2@1x.jpg) 1x,
+                          url(./images/testimonial/unsplash2@3x.jpg) 2x)">
+          <div class="testimonials__item-content">
+            <img src="image/png" srcset="
+                                ./images/testimonial/avatar2@1x.png 1x,
+                                ./images/testimonial/avatar2@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+            <blockquote class="testimonials__comment">
+              <cite class="testimonials__comment-name">Ibuk Sukijan<span>Ibu Rumah Tangga</span></cite>
+              <p class="testimonials__comment-text">
+                “Makasih Panto, aku sekarang berasa tinggal di apartment karena barang-barang yang terlihat mewah“
+              </p>
+            </blockquote>
+            <ul class="rating">
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star-opacity.svg" alt="icon star-opasity">
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="testimonials__item" style="background-image:
+                 -webkit-image-set( 
+                          url(./images/testimonial/unsplash3@1x.avif) type('image/avif') 1x,
+                          url(./images/testimonial/unsplash3@2x.avif) type('image/avif') 2x,
+                          url(./images/testimonial/unsplash3@1x.webp) type('image/webp') 1x,
+                          url(./images/testimonial/unsplash3@2x.webp) type('image/webp') 2x,
+                          url(./images/testimonial/unsplash3@1x.jpg) 1x,
+                          url(./images/testimonial/unsplash3@3x.jpg) 2x)">
+          <div class="testimonials__item-content">
+            <img src="image/png" srcset="
+                                ./images/testimonial/avatar3@1x.png 1x,
+                                ./images/testimonial/avatar3@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+            <blockquote class="testimonials__comment">
+              <cite class="testimonials__comment-name">Mpok Ina<span>Karyawan Swasta</span></cite>
+              <p class="testimonials__comment-text">
+                “Sangat terjangkau untuk kantong saya yang tidak terlalu banyak“
+              </p>
+            </blockquote>
+            <ul class="rating">
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star.svg" alt="icon star">
+              </li>
+              <li class="rating__item">
+                <img src="./images/icons/star-opacity.svg" alt="icon star-opasity">
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
     </section>
 
 
