--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,89 @@
 
   </main>
   <footer class="footer">
-    <div class="container"></div>
+    <div class="footer__container container">
+      <div class="footer__inner">
+        <div class="footer__content">
+          <a class="footer__logo logo logo--black" href="./index.html">Panto</a>
+          <p class="footer__content-text">
+            The advantage of hiring a workspace with us is that givees you comfortable service and all-around
+            facilities.
+          </p>
+        </div>
+        <div class="footer__box-lists">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <p class="footer__title">services</p>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="">Email Marketing</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="">Campaigns</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="">Branding</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <p class="footer__title">Furniture</p>
+
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="">Beds</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="">Chair</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="">All</a>
+            </li>
+          </ul>
+          <address>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <p class="footer__title">Follow Us</p>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link flex" href="">
+                  <svg class="footer__link-svg footer__link-svg--facebook" width="10" height="20"
+                    aria-label="icon facebook">
+                    <use href="./images/icons/icons.svg#facebook"></use>
+                  </svg>
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link flex" href="">
+                  <svg class="footer__link-svg" width="20" height="16" aria-label="icon Twitter">
+                    <use href="./images/icons/icons.svg#twitter"></use>
+                  </svg>Twitter</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link flex" href="">
+                  <svg class="footer__link-svg" width="20" height="20" aria-label="icon Instagram">
+                    <use href="./images/icons/icons.svg#instagram"></use>
+                  </svg>
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
+      <div class="footer__copy-list">
+        <p class="footer__copy">Copyright © 2021</p>
+        <ul class="footer__list-copylink">
+          <li class="footer__item">
+            <a class="footer__link" href="">Terms & Conditions</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="">Privacy Policy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
