--- a/index.html
+++ b/index.html
@@ -142,9 +142,6 @@
       data-aos-duration="1000">
       <ul class="container">
         <h2 class="bestproduct__title section-title">Best Selling Product</h2>
-
-
-
         <ul class="tabs-buttons tabs-wrapper">
           <a class="tabs-buttons__btn tabs__link tabs__link--active" href="#products-chair">Chair</a>
           <a class="tabs-buttons__btn tabs__link" href="#products-beds">Beds</a>
@@ -1397,7 +1394,7 @@
           <a class="bestproduct__link link-more" href="">View All</a>
         </ul>
     </section>
-    <!--<section class="experiences">
+    <section class="experiences">
       <div class="experiences__box flex">
         <div class="experiences__thumb">
           <img src="image/png" srcset="
@@ -1414,80 +1411,75 @@
           </p>
           <a class="link-more" href="">More Info</a>
         </div>
-
       </div>
     </section>
     <section class="materials">
-      <!-- <div class="materials__container"> -->
-    <div class="materials__box flex">
-      <div class="experiences__materials container">
-        <p class="subtitle">Materials</p>
-        <h2 class="experiences__title section-title">Very serious materials for making furniture</h2>
-        <p class="materials__descr experiences__descr">
-          Because panto was very serious about designing furniture for our environment, using a very expensive and
-          famous capital
-          but at a relatively low price
-        </p>
-        <a class="link-more" href="">More Info</a>
-      </div>
-      <div class="materials__thumb flex">
-        <div class="materials__thumb-row1">
-          <img class="materials__img" src="image/png" srcset="
+      <div class="materials__container">
+        <div class="materials__box flex">
+          <div class="experiences__materials container">
+            <p class="subtitle">Materials</p>
+            <h2 class="experiences__title section-title">Very serious materials for making furniture</h2>
+            <p class="materials__descr experiences__descr">
+              Because panto was very serious about designing furniture for our environment, using a very expensive and
+              famous capital
+              but at a relatively low price
+            </p>
+            <a class="link-more" href="">More Info</a>
+          </div>
+          <div class="materials__thumb flex">
+            <div class="materials__thumb-row1">
+              <img class="materials__img" src="image/png" srcset="
                         ./images/materials/images1@1x.png 1x,
                         ./images/materials/images1@2x.png 2x" loading="lazy" decoding="async" alt="images" />
-          <img class="materials__img" src="image/png" srcset="
+              <img class="materials__img" src="image/png" srcset="
                         ./images/materials/images2@1x.png 1x,
                         ./images/materials/images2@2x.png 2x" loading="lazy" decoding="async" alt="images" />
-        </div>
-        <div class="materials__thumb-row2">
-          <img src="image/png" srcset="
+            </div>
+            <div class="materials__thumb-row2">
+              <img src="image/png" srcset="
                         ./images/materials/images3@1x.png 1x,
                         ./images/materials/images3@2x.png 2x" loading="lazy" decoding="async" alt="images" />
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    </div>
     </section>
     <section class="testimonials container">
       <p class="subtitle">Testimonials</p>
       <h2 class="testimonials__title section-title">Our Client Reviews</h2>
       <ul class="testimonials__list">
-        <li class="testimonials__item" style="background-image:
- -webkit-image-set( 
-          url(./images/testimonial/unsplash1@1x.avif) type('image/avif') 1x,
-          url(./images/testimonial/unsplash1@2x.avif) type('image/avif') 2x,
-          url(./images/testimonial/unsplash1@1x.webp) type('image/webp') 1x,
-          url(./images/testimonial/unsplash1@2x.webp) type('image/webp') 2x,
-          url(./images/testimonial/unsplash1@1x.jpg) 1x,
-          url(./images/testimonial/unsplash1@3x.jpg) 2x)">
-          <div class="testimonials__item-content">
-            <img src="image/png" srcset="
+        <li class="testimonials__item">
+          <div class="testimonials__thumb" style="background-image:
+        -webkit-image-set( 
+                  url(./images/testimonial/unsplash-1@1x.png) 1x,
+                  url(./images/testimonial/unsplash-1@2x.png) 2x)">
+            <div class="testimonials__item-content">
+              <img src="image/png" srcset="
                         ./images/testimonial/avatar1@1x.png 1x,
                         ./images/testimonial/avatar1@2x.png 2x" loading="lazy" decoding="async" alt="images" />
-            <blockquote class="testimonials__comment">
-              <cite class="testimonials__comment-name">Bang Upin<span>Pedagang Asongan</span></cite>
-              <p class="testimonials__comment-text">
-                “Terimakasih banyak, kini ruanganku menjadi lebih mewah dan terlihat mahal“
-              </p>
-            </blockquote>
-            <ul class="rating">
-              <li class="rating__item">
-                <img src="./images/icons/star.svg" alt="icon star">
-              </li>
-              <li class="rating__item">
-                <img src="./images/icons/star.svg" alt="icon star">
-              </li>
-              <li class="rating__item">
-                <img src="./images/icons/star.svg" alt="icon star">
-              </li>
-              <li class="rating__item">
-                <img src="./images/icons/star.svg" alt="icon star">
-              </li>
-              <li class="rating__item">
-                <img src="./images/icons/star-opacity.svg" alt="icon star-opasity">
-              </li>
-            </ul>
-          </div>
+              <blockquote class="testimonials__comment">
+                <cite class="testimonials__comment-name">Bang Upin<span>Pedagang Asongan</span></cite>
+                <p class="testimonials__comment-text">
+                  “Terimakasih banyak, kini ruanganku menjadi lebih mewah dan terlihat mahal“
+                </p>
+              </blockquote>
+              <ul class="rating">
+                <li class="rating__item">
+                  <img src="./images/icons/star.svg" alt="icon star">
+                </li>
+                <li class="rating__item">
+                  <img src="./images/icons/star.svg" alt="icon star">
+                </li>
+                <li class="rating__item">
+                  <img src="./images/icons/star.svg" alt="icon star">
+                </li>
+                <li class="rating__item">
+                  <img src="./images/icons/star.svg" alt="icon star">
+                </li>
+                <li class="rating__item">
+                  <img src="./images/icons/star-opacity.svg" alt="icon star-opasity">
+                </li>
+              </ul>
+            </div>
           </div>
         </li>
         <li class="testimonials__item">
@@ -1670,7 +1662,7 @@
 
 
   </main>
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="footer__container container">
       <div class="footer__inner">
         <div class="footer__content">
@@ -1698,7 +1690,6 @@
           <ul class="footer__list">
             <li class="footer__item">
               <p class="footer__title">Furniture</p>
-
             </li>
             <li class="footer__item">
               <a class="footer__link" href="">Beds</a>
@@ -1754,7 +1745,7 @@
         </ul>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <!-- <script src="libs/mixitup-v3/patrickkunka-mixitup-61dac05/dist/mixitup.min.js"></script> -->
