--- a/index.html
+++ b/index.html
@@ -19,49 +19,49 @@
 </head>
 
 <body>
-  <!-- <header class="header">
-    <div class="container">
-      <div class="header__inner">
-        <a class="logo logo--white" href="./index.html">Panto</a>
-        <nav class="nav">
-          <button class="nav__menu-btn">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button> 
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a class="nav__link nav__link--flex" href="#">Furniture
-                <svg class="nav__link-svg" width="12" height="16" aria-label="icon">
-                  <use href="./images/icons/icons.svg#arrow-down"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="">Shop</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="">About Us</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="">Contact</a>
-            </li>
-          </ul>
+  <header class="header container">
 
-        </nav>
-        <a class="header__basket" href="">
-          <div class="header__basket-icon">
-            <svg class="nav__link-svg" width="32" height="32" aria-label="icon basket">
-              <use href="./images/icons/icons.svg#basket"></use>
-            </svg>
-            <span>10</span>
-          </div>
-        </a>
-      </div>
+    <div class="header__inner">
+      <a class="logo logo--white" href="./index.html">Panto</a>
+      <nav class="nav">
+        <button class="nav__menu-btn">
+          <span class="nav__menu-btn-line"></span>
+          <span class="nav__menu-btn-line"></span>
+          <span class="nav__menu-btn-line"></span>
+        </button>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link nav__link--flex" href="#">Furniture
+              <svg class="nav__link-svg" width="12" height="16" aria-label="icon">
+                <use href="./images/icons/icons.svg#arrow-down"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="">Shop</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="">About Us</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="">Contact</a>
+          </li>
+        </ul>
+
+      </nav>
+      <a class="header__basket" href="">
+        <div class="header__basket-icon">
+          <svg class="nav__link-svg" width="32" height="32" aria-label="icon basket">
+            <use href="./images/icons/icons.svg#basket"></use>
+          </svg>
+          <span>10</span>
+        </div>
+      </a>
     </div>
-  </header> -->
+
+  </header>
   <main class="main">
-    <!-- <section class="hero" style="background-image:
+    <section class="hero" style="background-image:
                 linear-gradient(180.00deg, rgba(255, 255, 255, 0) 86.133%, rgb(255, 255, 255) 100%),
                 -webkit-image-set(
             url(./images/hero/hero@1x.avif) type('image/avif') 1x,
@@ -74,13 +74,18 @@
             url(./images/hero/hero@2x.jpg) 2x)">
 
       <div class="hero__tips">
-        <button class="hero__tip hero__tip--1" data-uk-tooltip="{pos:'bottom-center'}" title="Clue">
-
-          <span class="hero__tooltiptext" data-uk-tooltip=""
-            title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, repudiandae.">+</span>
-
+        <button class="hero__tip hero__tip--1" data-uk-tooltip="{pos:'bottom-center'}"
+          title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, repudiandae.">
+          <span class="hero__tooltiptext" data-uk-tooltip="" title="">+</span>
         </button>
-        <button class="hero__tip hero__tip--2" data-uk-tooltip="{pos:'bottom-left'}" title="Подсказка">
+        <button class="hero__tip hero__tip--2" data-uk-tooltip="{pos:'bottom-left'}"
+          title="Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
+          <span class="hero__tooltiptext" data-uk-tooltip=""
+            title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, repudiandae.">+
+          </span>
+        </button>
+        <button class="hero__tip hero__tip--3" data-uk-tooltip="{pos:'top-centr'}"
+          title="Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
           <span class="hero__tooltiptext" data-uk-tooltip=""
             title="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, repudiandae.">+
           </span>
@@ -105,7 +110,7 @@
           </form>
         </div>
       </div>
-    </section> -->
+    </section>
     <section class="choosingus">
       <div class="container">
         <div class="choosingus__inner">
