--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,8 @@
           <a class="bestproduct__link link-more" href="">View All</a>
         </ul>
     </section>
-    <section class="experiences">
+    <section class="experiences aos-init aos-animate" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+      data-aos-duration="1000">
       <div class="experiences__box flex">
         <div class="experiences__thumb">
           <img src="image/png" srcset="
@@ -1418,7 +1419,8 @@
         </div>
       </div>
     </section>
-    <section class="materials">
+    <section class="materials aos-init aos-animate" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+      data-aos-duration="1000">
       <div class="materials__container">
         <div class="materials__box flex">
           <div class="experiences__materials container">
