--- a/index.html
+++ b/index.html
@@ -1336,8 +1336,7 @@
         </ul>
       </div>
     </section>
-    <section class="experiences aos-init aos-animate" data-aos="flip-right" data-aos-easing="ease-out-cubic"
-      data-aos-duration="1000">
+    <section class="experiences" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <div class="experiences__box flex">
         <div class="experiences__thumb">
           <img src="image/png" srcset="
@@ -1356,8 +1355,7 @@
         </div>
       </div>
     </section>
-    <section class="materials aos-init aos-animate" data-aos="flip-up" data-aos-easing="ease-out-cubic"
-      data-aos-duration="1000">
+    <section class="materials" data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
       <div class="materials__container">
         <div class="materials__box flex">
           <div class="experiences__materials container">
@@ -1388,7 +1386,7 @@
         </div>
       </div>
     </section>
-    <section class="testimonials container">
+    <section class="testimonials container" data-aos="zoom-out-down" data-aos-delay="100">
       <p class="subtitle">Testimonials</p>
       <h2 class="testimonials__title section-title">Our Client Reviews</h2>
       <ul class="testimonials__list">
