--- a/index.html
+++ b/index.html
@@ -1386,7 +1386,8 @@
         </div>
       </div>
     </section>
-    <section class="testimonials container" data-aos="zoom-out-down" data-aos-delay="100">
+    <section class="testimonials container" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+      data-aos-duration="1000" data-aos-delay="100">
       <p class="subtitle">Testimonials</p>
       <h2 class="testimonials__title section-title">Our Client Reviews</h2>
       <ul class="testimonials__list">
